1998-06-23  Stefan Taferner  <taferner@kde.org> (KMail-0.7.7)

	* Composer: changed behaviour of email completion a bit.
	Now it is possible to add multiple recipients with comma
	separated and complete also those after the first one.
	Drawback: email addresses with comma in them are not
	handled properly currently.

	* Pop leave-on-server: due to the fact that we need another
	field in the pop settings dialog "download-all-msgs"
	the leave-on-server checkbox currently also toggles
	the download-all-msgs feature.
	So:  download-all-msgs = !leave-on-server

	* Folders are now marked red after download if they
	contain new or unread messages. As a feature, folders
 	that receive old messages are not marked.

	* Fixed problems in pop code downloading old messages
	also. The "download" dialog is a bit misleading because
	it should say now "checking message:" instead of
	"downloading message:" because old messages are counted
	here also.

1998-06-22  Markus Wuebben  <markus@kde.org> (KMail-0.7.6)

	* fixed a whole bunch of stuff that made kmail segfault.

1998-06-21  Mario Weilguni   <mweilguni@kde.org>

	* small fix for quicker response in kmnewiostatus.cpp

	* "Delete folder" dialog now defaults to "No" (compliant to 
	KDE standards)

1998-06-20  Markus Wuebben  <markus@kde.org>

	* kmsender.cpp (cleanup): Fixed the sendQueued problem.
	If only one message from the outbox couldnt get sent all
	following messages got deleted from the outbox. This is fixed now.
	

1998-06-19  Stefan Taferner  <taferner@kde.org> (KMail-0.7.6)

	* Folder: fixed broken locking on systems without
	flock(). Thanks to Werner Ertle <wer@christl.hl.siemens.de>
	who sent me the patch.

1998-06-18  Stefan Taferner  <taferner@kde.org> (KMail-0.7.5)

	* Deleting folders crashed kmail. Fixed.

	* Folder-compacting: added busy pointer and progress
	output in the status bar (idea from Mario).	

	* Reader: removed ':' from the characters that mark
	quoted text to catch smileys at the beginning of the